--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 **/**/.DS_Store
-
+node_modules/
+bower_components/
+static/bundle.js
+static/bundle.js.map
+static/bundle.min.js
+static/bundle.min.js.map
