--- a/package.json
+++ b/package.json
@@ -4,26 +4,25 @@
   "description": "",
   "author": "Che Mcnabb",
   "devDependencies": {
-    "browserify": ">=9.0.8",
-    "browserify-shim": ">=3.8.5",
-    "flickity": ">=1.1.0",
-    "grunt": ">=1.3.0",
-    "grunt-browserify": ">=3.7.0",
-    "grunt-connect": ">=0.2.0",
-    "grunt-contrib-concat": ">=0.5.0",
-    "grunt-contrib-connect": ">=1.0.2",
-    "grunt-contrib-copy": ">=0.7.0",
-    "grunt-contrib-jshint": ">=0.10.0",
-    "grunt-contrib-sass": ">=0.7.4",
-    "grunt-contrib-uglify": ">=0.5.1",
-    "grunt-contrib-watch": ">=0.6.1",
-    "grunt-serve": ">=0.1.6",
-    "hammerjs": ">=2.0.8",
-    "imagesloaded": ">=3.1.8",
-    "ismobilejs": ">=0.3.9",
-    "jquery.cookie": ">=1.4.1",
-    "phaser": ">=2.6.1",
-    "picturefill": ">=2.3.1"
+    "browserify": "^17.0.0",
+    "browserify-shim": "^3.8.16",
+    "flickity": "^3.0.0",
+    "grunt": "^1.6.1",
+    "grunt-browserify": "^6.0.0",
+    "grunt-contrib-concat": "^2.1.0",
+    "grunt-contrib-connect": "^3.0.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-jshint": "^3.2.0",
+    "grunt-contrib-sass": "^2.1.0",
+    "grunt-contrib-uglify": "^5.2.2",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-serve": "^0.1.6",
+    "hammerjs": "^2.0.8",
+    "imagesloaded": "^5.0.0",
+    "ismobilejs": "^1.1.1",
+    "jquery.cookie": "^1.4.1",
+    "phaser-ce": "^2.19.0",
+    "picturefill": "^3.0.3"
   },
   "browser": {
     "modernizr": "./bower_components/modernizr/modernizr.js",
